初始安装笔记

--- a/k8s/src/笔记/安装.md
+++ b/k8s/src/笔记/安装.md
@@ -1,8 +1,27 @@
 # 1. 安装的两种方式
  kubeadm 安装
  二进制安装
- 
+    
  https://blog.csdn.net/aa18855953229/article/details/108988316
  https://blog.csdn.net/redrose2100/article/details/123254371?spm=1001.2101.3001.6661.1&utm_medium=distribute.pc_relevant_t0.none-task-blog-2%7Edefault%7ECTRLIST%7Edefault-1-123254371-blog-108988316.pc_relevant_multi_platform_whitelistv1&depth_1-utm_source=distribute.pc_relevant_t0.none-task-blog-2%7Edefault%7ECTRLIST%7Edefault-1-123254371-blog-108988316.pc_relevant_multi_platform_whitelistv1&utm_relevant_index=1
 
 ## 1.2 
+
+# 2 docker 和containerd 区别
+
+Docker作为k8s容器运行时，调用关系如下:
+kubelet --> docker shim(在 kubelet进程中) --> dockerd --> containerd
+
+Containerd作为k8s容器运行时，调用关系如下:
+kubelet --> cri plugin (在 containerd进程中)--> containerd
+其中dockerd虽增加了swarm cluster、docker build、docker API等功能，但也会引入一些bug，而与containerd相比，多了一层调用。
+区别：
+1、containerd不需要经过dockershim，所以调用链更短，组件更少，更稳定，占用节点资源更少，docker需要经过所以调用链更长；
+2、docker调用cni是“docker-shim”，containerd调用cni是“containerd-cri”。
+
+# 3. 容器 service, Inress, 微服务负载均衡怎么做
+
+# 4. 镜像怎么打包、发布
+# 5. 容器网络,网络插件优缺点使用场景 
+# 6. ks8集群 升级 回退，扩缩容
+# 7. 
