初始安装笔记

--- a/k8s/src/笔记/安装.md
+++ b/k8s/src/笔记/安装.md
@@ -24,4 +24,4 @@ kubelet --> cri plugin (在 containerd进程中)--> containerd
 # 4. 镜像怎么打包、发布
 # 5. 容器网络,网络插件优缺点使用场景 
 # 6. ks8集群 升级 回退，扩缩容
-# 7. 
+# 7. 微服务场景应用
