初始安装笔记

--- a/k8s/src/笔记/安装.md
+++ b/k8s/src/笔记/安装.md
@@ -1,3 +1,11 @@
+# 关键组件
+##  pod
+##  Deployment  
+1. 只能管理无状态应用
+
+##  service 
+1. 可以这么理解？
+    service 对一组具有相同功能的***容器***  应用提供一个统一的入口。并且将请求负载分发到后端的各个容器应用上
 # 1. 安装的两种方式
  kubeadm 安装
  二进制安装
@@ -24,4 +32,7 @@ kubelet --> cri plugin (在 containerd进程中)--> containerd
 # 4. 镜像怎么打包、发布
 # 5. 容器网络,网络插件优缺点使用场景 
 # 6. ks8集群 升级 回退，扩缩容
+## 6.1 集群的集群怎么做
 # 7. 微服务场景应用
+# 8. k8s 容量，多少节点可以提供多少服务能力
+## 8.2 一个集群能管理多少节点
