--- a/k8s/src/笔记/安装.md
+++ b/k8s/src/笔记/安装.md
@@ -4,8 +4,15 @@
 1. 只能管理无状态应用
 
 ##  service 
-1. 可以这么理解？
+1. 可以这么理解？ 
     service 对一组具有相同功能的***容器***  应用提供一个统一的入口。并且将请求负载分发到后端的各个容器应用上
+    
+    如果两个tomcat pod 对外提供服务，由于POD随时可漂移性IP访问方式并不可靠，所以需要做一个前端做一个负载均衡转发
+    
+2.  服务创建命令
+
+    1.  创建 服务 kubectl create -f webapp-rc.yaml
+    2. kubectl expose rc "webapp"  ,暴露之后，使用命令 kubectl get svc  查看，可以看到已经分配好了cluster IP 
 # 1. 安装的两种方式
  kubeadm 安装
  二进制安装
