添加service 的相关介绍

--- a/k8s/src/笔记/安装.md
+++ b/k8s/src/笔记/安装.md
@@ -11,8 +11,18 @@
     
 2.  服务创建命令
 
-    1.  创建 服务 kubectl create -f webapp-rc.yaml
-    2. kubectl expose rc "webapp"  ,暴露之后，使用命令 kubectl get svc  查看，可以看到已经分配好了cluster IP 
+    1.  创建应用 kubectl create -f webapp-rc.yaml，创建应用副本
+    2. kubectl expose rc "webapp"  ,创建服务之后，使用命令 kubectl get svc  查看，可以看到已经分配好了cluster IP 
+3. 负载分发策略
+   1. roundRobin 轮询模式
+   2. SessionAffinity  基于客户端IP保持会话模式，如果是相同客户端的请求会被转发到同一个Pod上
+
+4. 外部服务
+   1. 先创建一个无Label Slector Service,  无法选则后端Pod
+   2. 手动创建与Service同名称的Endpoint
+
+5. Headless Service 作用是不使用 Kubernetes 默认的负载均衡策略
+
 # 1. 安装的两种方式
  kubeadm 安装
  二进制安装
