--- a/k8s/src/笔记/安装.md
+++ b/k8s/src/笔记/安装.md
@@ -1,14 +1,21 @@
 # 关键组件
 ##  pod
+
+
+
 ##  Deployment  
 1. 只能管理无状态应用
 
 ##  service 
+解决的是容器负载的问题。解决的是单个服务的问题
+
 1. 可以这么理解？ 
     service 对一组具有相同功能的***容器***  应用提供一个统一的入口。并且将请求负载分发到后端的各个容器应用上
-    
+
     如果两个tomcat pod 对外提供服务，由于POD随时可漂移性IP访问方式并不可靠，所以需要做一个前端做一个负载均衡转发
-    
+
+    - Service 的类型：
+
 2.  服务创建命令
 
     1.  创建应用 kubectl create -f webapp-rc.yaml，创建应用副本
@@ -21,9 +28,66 @@
    1. 先创建一个无Label Slector Service,  无法选则后端Pod
    2. 手动创建与Service同名称的Endpoint
 
-5. Headless Service 作用是不使用 Kubernetes 默认的负载均衡策略
+5. Headless Service 作用是不使用 Kubernetes 默认的负载均衡策略 ，clusterIP 设置为None
+
+6. Cassadnra 根据Service 自动实现查找pod
+
+7. 从集群外部访问Pod或者Service，Pod和Service都是Kubernetes的虚拟概念不能对外提供服务
+
+   1. 将容器的Port映射到宿主机上
+
+      ```yaml
+      ports:
+      - containerPort: 8080
+       hostPort: 8081
+      ```
+
+   2.  将Service的Port映射到宿主机上，同时service type设置为nodePort
+
+      ```yaml
+      spec:
+       type: NodePort
+       ports:
+       - port: 8080
+         targetPort: 8080
+         nodePort: 8081
+      ```
+
+8. 最佳实践
+   - 创建完成deployment之后，直接expose生成service，减少手动配置
+
+# CoreDns
+
+1.作用 集群内部需要通过服务名称对服务进行访问，就需要一个域名和IP的解析
+
+
+
+# Ingress
+
+ 用于将不同的URL 访问转发到后端不同的Service，解决的是外部客户端访问一组服务的问题。
+
+
+
+​	1.使用Ingress ,需要创建Ingress controller，backend服务，Ingress 策略。创建Ingress 需要保证后端的服务已经创建完成否则会报错。
+
+- ​	创建Ingress Controller，以Pod形式运行，监控Api Serverd的ingress接口后端的backend Service，如果service 有变化，则Ingress Controller自动更新其转发规则。
+- 第一步：创建backend 服务，先创建默认
+- 第二步：创建 Ingress Controller
+- 第三步：定义转发策略
+
+2. Ingress Controller 基于Ingress 转发规则将客户端 直接转发到service对应的后端Endpoint上，会跳过kube-proxy的转发功能，导致kube-proxy不再起作用。
+3. Ingress 转发策略
+   1. 单个后端服务
+   2. 同一域名不同Url转发到不同的服务上
+   3. 不同域名的服务转发到不同的服务上
+   4. 不使用域名转发规则，用于一个网站不使用域名直接提供服务的场景。
+      1. 默认开启https，需要修改INgress annotation，关闭默认转发
+      2. 
+
+
 
 # 1. 安装的两种方式
+
  kubeadm 安装
  二进制安装
     
