--- a/k8s/src/笔记/安装.md
+++ b/k8s/src/笔记/安装.md
@@ -1,5 +1,13 @@
 # 关键组件
-##  pod
+##  Pod
+
+Pod可以有一个或者多个容器
+
+## 	静态Pod
+
+​		仅存在于特定节点上的Pod，不能通过API Server 进行管理。
+
+- ​	创建静态Pod 有两种方式：配置文件和Http方式	
 
 
 
