添加ConfigMap 限制条件

--- a/k8s/src/笔记/安装.md
+++ b/k8s/src/笔记/安装.md
@@ -9,7 +9,19 @@ Pod可以有一个或者多个容器
 
 - ​	创建静态Pod 有两种方式：配置文件和Http方式	
 
+  ## ConfigMap
 
+使用ConfigMap的限制条件：
+
+1. 必须再Pod 之前创建
+
+2. 只有处于相同Namespace的才能用
+
+3. > 配额管理未能实现? 1.24.3 ***也没有实现吗？还是废弃了***
+
+4. kubelet 只支持可以被API server管理的Pod使用ConfigMap，静态Pod不支持使用
+
+5. POd对ConfigMap进行挂载的时候只能挂载为目录，如果有相同的目录，则已有的目录被ConfigMap的目录覆盖。解决这种问题需要先挂载到临时目录，然后通过cp或者link的方式应用的实际配置目录下
 
 ##  Deployment  
 1. 只能管理无状态应用
