添加ConfigMap 限制条件

--- a/k8s/src/笔记/安装.md
+++ b/k8s/src/笔记/安装.md
@@ -23,11 +23,69 @@ Pod可以有一个或者多个容器
 
 5. POd对ConfigMap进行挂载的时候只能挂载为目录，如果有相同的目录，则已有的目录被ConfigMap的目录覆盖。解决这种问题需要先挂载到临时目录，然后通过cp或者link的方式应用的实际配置目录下
 
+   ## Downward API
+
+容器内部获取Pod信息
+
+Pod注入信息到容器的方式：
+
+1. 环境变量，单个变量的注入
+2. volume 挂载：将组类信息生成文件并挂载到容器内部。
+
+价值：
+
+实现节点自动发现。
+
+##     健康检查
+
+1. LIvenessProbe 探针：判断容器是否存活，如果容器不包含Liveness Probe 探针，那么kubelet认为该容器LivenessProbe探针返回的永远是Success
+
+2. ReadinessProbe探针：判断容器的服务是否可用
+
+   LivenessPro和ReadinessPro均可以用如下方式实现：
+
+   配置方式：
+
+   1. ExecAction:在容器内部执行一个命令如果返回码为0则表明容器健康
+   2. TCPSocketAction: 通过容器地址内的和端口号执行tcp检查
+   3. HttpGetAction:通过探测容器的IP地址端口以及请求路径，如果返回值为200-400之间则认为容器健康
+
+   ## Pod调度
+
+   1.9之后RC被删除之后Pod副本一并会被删除，如果需要取消：
+
+   ```
+   --casecade=false
+   ```
+
+   调度方式：
+
+   1. Deployment或者RC 全自动调度
+
+   2. NodeSelector:定向调度
+
+      通过在节点上打标签的方式，创建Pod的时候指定nodeSelector
+
+   3. Node亲和性调度
+      1. requiredDuringSchedulingIgnoredDuringExecution 相当于nodeSelector定向调度，硬限制
+      2. preferredDuringSchedulingIgnoredDuringExecution:软限制尝试调度pod到node上。还可以设置多个软限制并定义权重以实现执行的先后顺序。IgnoredDuringExecution为如果pod在运行期间node的属性发生了变更，则系统会忽略变更，该pod可以继续在该节点运行
+
+   4. Pod 亲和度调度和互斥策略
+
+   5. 容忍和污点：Taints及Tolerations
+
+      https://blog.csdn.net/qq_34857250/article/details/90259693
+
 ##  Deployment  
+
 1. 只能管理无状态应用
 
 ##  service 
-解决的是容器负载的问题。解决的是单个服务的问题
+解决的是容器负载的问题。解决的是：
+
+ 服务发现（防止pod 失联）
+
+负载均衡（轮询转发请求到后端集群中的pod
 
 1. 可以这么理解？ 
     service 对一组具有相同功能的***容器***  应用提供一个统一的入口。并且将请求负载分发到后端的各个容器应用上
@@ -75,6 +133,11 @@ Pod可以有一个或者多个容器
 
 8. 最佳实践
    - 创建完成deployment之后，直接expose生成service，减少手动配置
+
+9. service 的三种形式
+   1. ClusterIP　 **集群IP，仅供k8s内部访问(只能在pod 或node 上访问，无法外部访问)，相当于service 加了1个vip，通过vip 提供访问地址，再转发给各个Pod**
+   2. NodePort　　在每个node 节点为相应Pod启动一个对外端口（默认30000起步），映射pod 内部端口。通过任意一个Pod 所在的节点ip+port 就能访问pod ，多个pod 需要在service 前面加一个LB（lvs/proxy）把每个节点的ip+port 加入，才能实现负载均衡,这样每个服务都得添加一次，增加了管理维护成本
+   3. Loadblance   云服务厂商提供的，自动添加service 映射对外端口到负载上面，例如阿里云可以通过SLB为service 提供负载均衡。只有云服务厂商的k8s 才有此形式
 
 # CoreDns
 
