--- a/k8s/src/笔记/安装.md
+++ b/k8s/src/笔记/安装.md
@@ -97,7 +97,35 @@ Pod注入信息到容器的方式：
 2.  服务创建命令
 
     1.  创建应用 kubectl create -f webapp-rc.yaml，创建应用副本
+
     2. kubectl expose rc "webapp"  ,创建服务之后，使用命令 kubectl get svc  查看，可以看到已经分配好了cluster IP 
+
+        ```go
+        kubectl  expose  --help
+        
+        kubectl     expose     deployment 　　　　　 nginx-dep1   --port=2022         --target-port=80  　　--type=NodePort 　　　　　　　　-n kzf
+        
+                   　　　　     service代理资源类型    资源名称　　　代理对外端口　         pod 中内部端口　　　   端口暴露类型（默认ClusterIp）　　 命名空间
+        ```
+
+        方式二 创建yaml
+
+        ```yaml
+        apiVersion: v1
+        kind: Service
+        metadata:
+          name: service-kzf1
+          namespace: asdf
+        spec:
+          clusterIP: NodePort　　　　　　　　　　　　#不写默认类型为Clusterip
+          ports:
+          - port: 2021　　　　　　　　　　　　　　　　 #clusterip 集群端口
+            targetPort: 80　　　　　　　　　　　　　　#pod 内部端口
+          selector:
+            app: nginx-label　　　　　　　　　　　　　#通过标签选择pod
+        ```
+
+        
 3. 负载分发策略
    1. roundRobin 轮询模式
    2. SessionAffinity  基于客户端IP保持会话模式，如果是相同客户端的请求会被转发到同一个Pod上
@@ -173,7 +201,6 @@ Pod注入信息到容器的方式：
 
  kubeadm 安装
  二进制安装
-    
  https://blog.csdn.net/aa18855953229/article/details/108988316
  https://blog.csdn.net/redrose2100/article/details/123254371?spm=1001.2101.3001.6661.1&utm_medium=distribute.pc_relevant_t0.none-task-blog-2%7Edefault%7ECTRLIST%7Edefault-1-123254371-blog-108988316.pc_relevant_multi_platform_whitelistv1&depth_1-utm_source=distribute.pc_relevant_t0.none-task-blog-2%7Edefault%7ECTRLIST%7Edefault-1-123254371-blog-108988316.pc_relevant_multi_platform_whitelistv1&utm_relevant_index=1
 
