--- a/k8s/src/笔记/材料.md
+++ b/k8s/src/笔记/材料.md
@@ -7,3 +7,7 @@
 ### 	Kubernetes 专栏
 
 ​	https://blog.csdn.net/chaotingge/category_10803206.html
+
+二进制安装k8s步骤
+
+https://blog.csdn.net/aa18855953229/article/details/117915759
