--- a/架构设计/架构图/材料收集.md
+++ b/架构设计/架构图/材料收集.md
@@ -7,3 +7,6 @@ https://guisu.blog.csdn.net/article/details/106695469
 k8s 日志采集
 
 https://blog.csdn.net/aa18855953229/article/details/109280930
+
+# Java相关架构图
+
