添加网络 IP 子网掩码，子网掩码和IP结合起来可以判断是否在同一个网段

--- a/k8s/笔记/网络.md
+++ b/k8s/笔记/网络.md
@@ -10,6 +10,140 @@ TCP/IP协议结构分为四层：
 
 从下到上分为：网络接口层、网际层、传输层、应用层
 
+常见的[网络层](https://so.csdn.net/so/search?q=网络层&spm=1001.2101.3001.7020)次划分：`TCP/IP四层模型`、`TCP/IP五层模型`、`OSI七层模型`
+
+- `TCP/IP四层模型`:网络接口层、网络层、传输层、应用层
+- `TCP/IP五层模型`:`物理层`、`数据链路层`、网络层、传输层、应用层
+- `OSI七层模型`:物理层、数据链路层、网络层、传输层、`会话层`、`表示层`、应用层
+
+##### OSI七层模型
+
+> TCP/IP协议时互联网的基础协议，任何和互联网有关的操作都狸奴开TCP/IP协议
+
+1. `物理层`(Physical Layer):物理层确保原始的数据可在各种物理媒体上传输，两个重要设备名称，中继器和集线器
+
+2. ```
+   数据链路层
+   ```
+
+   (Data Link Layer):最基本的服务是将源自网络层的数据可靠的传输到相邻节点的目标网络层，作用：物理地址寻址、数据的成帧、数据的检错、重发等
+
+   有关数据链路层的知识点：
+
+   1. 数据链路层为网络层提供可靠的数据传输
+   2. 基本数据单位为帧
+   3. 主要的协议：以太网协议
+   4. 两个重要的设备名称：网桥和交换机
+
+3. ```
+   网络层
+   ```
+
+   (Network Layer):实现两个端系统之间的数据透明传输，具体功能包括寻址、路径选择、连接的建立、保持和终止等。IP协议：仅仅提供不可靠、无连接的传送服务，主要功能有无连接数据报传输、数据报路由选择和差错控制
+
+   重点知识：
+
+   1. 网络层负责对子网间的数据包进行路由选择，可以是吸纳拥塞控制、网际互连等功能
+   2. 基本数据单位为IP数据报
+   3. 包含的主要协议：
+      `IP协议`(Internet Protecal)：因特网互联协议
+      `ICMP协议`(Internet Control Message protocol):因特网控制报文协议
+      `ARP协议`(Address Resolution Protocol):地址解析协议
+      `RARP协议`(Reverse Address Resolution protocol):逆地址解析协议
+   4. 重要的设备：路由器
+
+4. ```
+   传输层
+   ```
+
+   (Transport Layer):负责将上层数据分段并提供端到端、可靠的和不可靠的传输，还要处理端到端的差错控制和流量控制问题
+
+   有关的重点：
+
+   1. 传输层将上层数据分段并提供端到端的、可靠的或不可靠的传输以及端到端的差错控制和流量控制问题
+   2. 包含的主要协议：TCP协议(Transmission Control Protocol,传输控制协议)、UDP(User Datagram Protocol, 用户数据报协议)
+   3. 重要设备：网关
+
+5. `会话层`：管理主机之间的会话进程，即负责建立、管理、中值进程间的会话，会话层还在数据中插入校验点来实现数据的同步
+
+6. `表示层`:对上层数据或信息进行变换以保证一个主机应用层信息可以被另一个主机的应用程序理解，表示层的数据转换包括数据的加密、压缩、格式转换等
+
+7. `应用层`：为操作系统或网络应用程序提供访问网络服务的接口
+   会话层、表示层和应用层重点：
+
+   1. 数据传输基本单位为报文
+   2. 包含的束腰协议：FTP(文件传送协议)、Telnet(远程登录协议)、DNS(域名解析协议)、SMTP(邮件传送协议)、POP3(邮局协议)、HTTP协议
+
+## 3.IP地址
+
+1. 网络地址：IP地址由网络号和主机号组成，网络地址的主机号全为0，网络地址代表着整个网络
+2. 广播地址：也称为直接广播地址，是为了区分受限广播地址，广播地址与网络地址的主机号正好相反，广播地址中，主机号为全1，当向某个网络的广播地址发送消息时，该网络内的所有主机都能收到该广播消息
+3. 组播地址：
+
+`ABCD类地址`：
+
+- A类地址以0开头，第一个字节作为网络号，地址范围：0.0.0.0~127.255.255.255
+
+- B类地址以10开头，前面两个字节作为网络号，地址范围：128.0.0.0~191.255.255.255
+
+- C类地址以110开头，前面三个字节作为网络号，地址范围：192.0.0.0~223.255.255.255
+
+- D类地址以1110开头，地址范围224.0.0.0~239.255.255.255，D类地址作为组播地址（一对多通信）
+
+- E类地址以1111开头，地址范围是240.0.0.0~255.255.255.255
+  只有ABC有网络号和主机号之分
+
+  ##### IP和子网掩码
+
+  `IP`由四段数字组成，3类常用的IP
+  A类IP段：0.0.0.0. 到127.255.255.255
+  B类IP段：127.0.0.0 到191.255.255.255
+  C类字段：192.0.0.0 到223.255.255.255
+  `子网掩码`：
+  A类的IP段：255.0.0.0   一个子网最多容纳1677万台主机
+  B类的IP段：255.255.0.0   一个子网最多容纳6万台主机
+
+  C类的IP段：255.255.255.0   一个子网最多容纳254台(最后一位不能使0和255， 2^8-2=254)主机
+
+  子网掩码决定了一个子网计算机的数目，计算公式是2的n次方，例如子网掩码255.255.255.0，转换二进制11111111.11111111.11111111.00000000 前面为1的表示网络数，后面为0的表示主机数，也就是后面0的数量决定了主机的个数，具体主机个数是2^8次方256个，但是有两个`IP`不能用那就是最后一段不能为0和255，所以是254台
+  也可以通过主机数来逆向推算出子网掩码
+
+  ```
+  1.一个公司有530台电脑，设置子网掩码
+  先确定使用哪类IP较合适，显然是B类（A类太多，浪费，C类太少，不够）
+  2^9 < 530 < 2^10，所以子网掩码后面0的个数设为10个较为合适
+  则相应的子网掩码对应的二进制为11111111.11111111.11111100.00000000
+  转换成10进制为255.255.252.0
+  ```
+
+  附：192.168.1.0/26 /26表示子网掩码前26位全为1，即对应的子网掩码为255.255.255.192，对应的二进制为11111111.11111111.11111111.11000000
+
+  `判断是否在同一网段`
+  `网络标志`：A类的只算第一段、B类的只算第一、二段、C类的只算第一、二、三段
+  将IP和子网掩码化为二进制文件，然后做与运算，得出的结果就是网络标识（重点看子网掩码的`网络号`）。
+  `主机标识`：将子网掩码取反，然后和IP做与运算
+
+  ```
+  A IP:202.194.128.9
+  B IP:202.194.128.14
+  子网掩码：255.255.255.0
+  1.转换成二进制：
+  A：1100 1010.1100 0010.1000 0000.0000 1001
+  B：1100 1010.1100 0010.1000 0000.0000 1101
+  掩码：1111 1111.1111 1111. 1111 1111 .0000 0000
+  2.A、BIP与掩码做与运算
+  A：11001010.1100 0010.1000 0000 .0000 0000 转换成十进制 202.194.128.0
+  B: 1100 1010.1100 0010.1000 0000.0000 0000 转换成十进制 202.194.128.0
+  两个网络标识IP相同，说明在同一子网
+  3.计算主机标识：
+  将掩码取反：0000 0000.0000 0000.0000 0000.1111 1111
+  然后再再做与运算，得
+  A：0000 0000.0000 0000.0000 0000.0000 1001 转换成十进制为 9
+  B：0000 0000.0000 0000.0000 0000.0000 1101 转换成十进制为14
+  ```
+
+  
+
 ## 4.TCP协议的三次握手和四次挥手
 
 ##### 三次握手：
@@ -53,7 +187,7 @@ TCP/IP协议结构分为四层：
 
 ### 4.4 如果已经建立了连接，但是客户端突然出现故障了怎么办？
 
-TCP还设有一个保活计时器，显然，客户端如果出现故障，服务器不能一直等下去，白白浪费资源。服务器每收到一次客户端的请求后都会重新复位这个计时器，时间通常是设置为2小时，若两小时还没有收到客户端的任何数据，服务器就会发送一个探测报文段，以后每隔75秒钟发送一次。若一连发送10个探测报文仍然没反应，服务器就认为客户端出了故障，接着就关闭连接。
+TCP还设有一个保活计时器，显然，客户端如果出现故障，服务器不能一直等下去，白白浪费资源。服务器每收到一次客户端的请求后都会重新复位这个计时器，时间通常是设置为2小时，若两小时还没有收到客户端的任何数据，服务器就会发送一个探测报文段，以后**每隔75秒钟**发送一次。若一连发送10个探测报文仍然没反应，服务器就认为客户端出了故障，接着就关闭连接。
 
  
 
@@ -130,4 +264,9 @@ HTTP头中有一个Referer字段，这个字段用以标明请求来源于哪个
 添加校验token
 
 由于CSRF的本质在于攻击者欺骗用户去访问自己设置的地址，所以如果要求在访问敏感数据请求时，要求用户浏览器提供不保存在cookie中，并且攻击者无法伪造的数据作为校验，那么攻击者就无法再运行CSRF攻击。这种数据通常是窗体中的一个数据项。服务器将其生成并附加在窗体中，其内容是一个伪随机数。当客户端通过窗体提交请求时，这个伪随机数也一并提交上去以供校验。正常的访问时，客户端浏览器能够正确得到并传回这个伪随机数，而通过CSRF传来的欺骗性攻击中，攻击者无从事先得知这个伪随机数的值，服务端就会因为校验token的值为空或者错误，拒绝这个可疑请求。
- 
+
+
+
+# 参考
+
+https://www.cnblogs.com/maybe2030/p/4781555.html#_label1
