--- a/k8s/笔记/网络.md
+++ b/k8s/笔记/网络.md
@@ -265,6 +265,132 @@ HTTP头中有一个Referer字段，这个字段用以标明请求来源于哪个
 
 由于CSRF的本质在于攻击者欺骗用户去访问自己设置的地址，所以如果要求在访问敏感数据请求时，要求用户浏览器提供不保存在cookie中，并且攻击者无法伪造的数据作为校验，那么攻击者就无法再运行CSRF攻击。这种数据通常是窗体中的一个数据项。服务器将其生成并附加在窗体中，其内容是一个伪随机数。当客户端通过窗体提交请求时，这个伪随机数也一并提交上去以供校验。正常的访问时，客户端浏览器能够正确得到并传回这个伪随机数，而通过CSRF传来的欺骗性攻击中，攻击者无从事先得知这个伪随机数的值，服务端就会因为校验token的值为空或者错误，拒绝这个可疑请求。
 
+### 5.5 请简述ping一下的原理
+
+`ping`是利用网络上机器IP地址的唯一性，给目标IP地址发送一个` ICMP `回显请求，并要求对方返回一个 `ICMP` 回显应答来确定两台网络机器是否连接相通，时延是多少。一般用于检测网络通与不通 ，时延值越大，速度越慢。
+
+### 5.6 从浏览器输入URL到将页面渲染出来，发生了什么?
+
+1.首先，在浏览器地址栏中输入URL，先`解析URL`，检测URL地址是否合法；
+
+2.浏览器先查看浏览器缓存-系统缓存-路由器缓存，如果缓存中有，会直接在屏幕中显示页面内容。若没有，则跳到第3步操作。
+
+`浏览器缓存`：浏览器会记录DNS一段时间，因此，只是第一个地方解析DNS请求；操作系统缓存：如果在浏览器缓存中不包含这个记录，则会使系统调用操作系统，获取操作系统的记录(保存最近的DNS查询缓存)；
+
+`路由器缓存`：如果上述两个步骤均不能成功获取DNS记录，继续搜索路由器缓存；
+
+`ISP缓存`：若上述均失败，继续向ISP搜索。
+
+3.在发送http请求前，需要`域名解析`(DNS解析)，解析获取相应的IP地址。
+
+4.浏览器向服务器发起TCP连接，与浏览器建立`TCP三次握手`。
+
+5.握手成功后，浏览器向服务器`发送HTTP请求`，请求数据包。
+
+6.服务器处理收到的请求，`将数据返回至浏览器`。
+
+7.浏览器收到HTTP响应。
+
+8.浏览器解码响应，如果响应可以缓存，则`存入缓存`。
+
+9.浏览器发送`请求获取嵌入在HTML中的资源`（HTML，CSS，JavaScript，图片，音乐······），对于未知类型，会弹出对话框。
+
+10.`浏览器发送异步请求`。
+
+11.`页面全部渲染结束`。
+
+
+
+### 5.7 网页突然加载不出来，可能导致的原因有哪些？
+
+1.`网络`断开了；
+
+2.`后端页面`无法加载；
+
+3.`网页`被劫持了；
+
+4.`DNS`无法解析网址；
+
+5.`服务器`负载过大；
+
+6.`代理`设置问题；
+
+7.`电脑配置`太低；
+
+9.`CPU`,`内存`被占满；
+
+10.`SQL`查询数据太多，加载不出来；
+
+
+
+## 6.网络协议
+
+`OSICMP协议`：**因特网控制报文协议**，它是TCP/IP协议族的一个子协议，用于在IP主机、路由器之间传递控制消息。
+
+`TFTP协议`：是TCP/IP协议族中的一个用来在客户机与服务器之间进行**简单文件传输的协议**，提供不复杂、开销不大的文件传输服务。
+
+## 7.常见的网络问题
+
+### 7.1 请简述ping一下的原理
+
+`ping`是利用网络上机器IP地址的唯一性，给目标IP地址发送一个` ICMP `回显请求，并要求对方返回一个 `ICMP` 回显应答来确定两台网络机器是否连接相通，时延是多少。一般用于检测网络通与不通 ，时延值越大，速度越慢。
+
+### 7.2 从浏览器输入URL到将页面渲染出来，发生了什么?
+
+1.首先，在浏览器地址栏中输入URL，先`解析URL`，检测URL地址是否合法；
+
+2.浏览器先查看浏览器缓存-系统缓存-路由器缓存，如果缓存中有，会直接在屏幕中显示页面内容。若没有，则跳到第3步操作。
+
+`浏览器缓存`：浏览器会记录DNS一段时间，因此，只是第一个地方解析DNS请求；操作系统缓存：如果在浏览器缓存中不包含这个记录，则会使系统调用操作系统，获取操作系统的记录(保存最近的DNS查询缓存)；
+
+`路由器缓存`：如果上述两个步骤均不能成功获取DNS记录，继续搜索路由器缓存；
+
+`ISP缓存`：若上述均失败，继续向ISP搜索。
+
+3.在发送http请求前，需要`域名解析`(DNS解析)，解析获取相应的IP地址。
+
+4.浏览器向服务器发起TCP连接，与浏览器建立`TCP三次握手`。
+
+5.握手成功后，浏览器向服务器`发送HTTP请求`，请求数据包。
+
+6.服务器处理收到的请求，`将数据返回至浏览器`。
+
+7.浏览器收到HTTP响应。
+
+8.浏览器解码响应，如果响应可以缓存，则`存入缓存`。
+
+9.浏览器发送`请求获取嵌入在HTML中的资源`（HTML，CSS，JavaScript，图片，音乐······），对于未知类型，会弹出对话框。
+
+10.`浏览器发送异步请求`。
+
+11.`页面全部渲染结束`。
+
+
+
+### 7.3  网页突然加载不出来，可能导致的原因有哪些？
+
+1.`网络`断开了；
+
+2.`后端页面`无法加载；
+
+3.`网页`被劫持了；
+
+4.`DNS`无法解析网址；
+
+5.`服务器`负载过大；
+
+6.`代理`设置问题；
+
+7.`电脑配置`太低；
+
+9.`CPU`,`内存`被占满；
+
+10.`SQL`查询数据太多，加载不出来；
+
+
+
+
+
 
 
 # 参考
