--- a/k8s/笔记/网络.md
+++ b/k8s/笔记/网络.md
@@ -329,6 +329,61 @@ HTTP头中有一个Referer字段，这个字段用以标明请求来源于哪个
 
 `TFTP协议`：是TCP/IP协议族中的一个用来在客户机与服务器之间进行**简单文件传输的协议**，提供不复杂、开销不大的文件传输服务。
 
+
+
+端口是一个软件结构，被客户程序或服务进程用来发送和接收信息。一个端口对应一个16比特的数。服务进程通常使用一个固定的端口，例如，SMTP使用25、Xwindows使用6000。Tomcat的端口：8080，这些端口号是‘广为人知’的，因为在建立与特定的主机或服务的连接时，需要这些地址和目的地址进行通讯，列如我们去建立聊天通讯的指定的自定义端口（8090）。
+
+###  数据格式
+
+数据帧：帧头+IP数据包+帧尾 （帧头包括源和目标主机MAC初步地址及类型，帧尾是校验字）
+IP数据包：IP头部+TCP数据信息（IP头包括源和目标主机IP地址、类型、生存期等）
+TCP数据信息：TCP头部+实际数据 (TCP头包括源和目标主机端口号、顺序号、确认号、校验字等）
+常见的以太帧结构 
+
+
+
+##### 丢包
+
+我们在上述的讨论过程中描绘了一个公式那就是 La/R 不能大于1，如果 La/R 大于1，那么到达的排队将会无穷大，而且路由器中的排队队列所容纳的分组是有限的，所以等到路由器队列堆满后，新到达的分组就无法被容纳，导致路由器 丢弃(drop) 该分组，即分组会 丢失(lost)。
+
+计算机网络中的吞吐量
+除了丢包和时延外，衡量计算机另一个至关重要的性能测度是端到端的吞吐量。假如从主机 A 向主机 B 传送一个大文件，那么在任何时刻主机 B 接收到该文件的速率就是 瞬时吞吐量(instantaneous throughput)。如果该文件由 F 比特组成，主机 B 接收到所有 F 比特用去 T 秒，则文件的传送平均吞吐量(average throughput) 是 F / T bps。 
+
+
+
+##### 地址解析协议ARP
+
+当我们知道了一个主机或路由器的IP地址，如何找出其相应的硬件地址呢？
+
+地址解析协议ARP就是用来解决这样的问题的。
+IP协议使用了ARP协议，所以通常就把ARP协议划归为网络层。（RARP）逆地址解析协议。将物理地址转化为IP地址。但是现在的DHCP协议也有此功能。
+
+IP地址和物理地址因为格式不同（IP地址有32位，局域网的物理地址48位）不存在简单的映射关系。
+
+当新主机加入，撤走一些主机或更换网络适配器也会是主机的硬件地址发生改变。
+ARP为了解决这个问题实在主机ARP高速缓存中存放一个从IP地址到硬件地址的映射表，并且这个映射表还经常动态更新。
+
+每一台主机都设有一个ARP高速缓存，里面有本局域网上的各主机和路由器的IP地址到硬件地址的映射表，这些都是主机目前知道的一些地址，那么主机是怎样知道这些地址的呢？
+可见数据在本局域网上的传输使用的是MAC地址。
+
+当A要向本局域网上的某台主机B发送IP数据报时，现在其ARP高速缓存中查找是否有B的IP地址，有就在ARP高速缓存中查找其对应的硬件地址，再把这个硬件地址写入MAC帧中，然后通过局域网把该MAC帧发往此硬件地址。
+
+如果查不到该主机的IP地址。
+主机A的ARP进程会在本局域网广播一个ARP请求分组，里面包含A的IP地址和物理地址，和想得到主机B的IP地址。本局域网上的所有主机运行的ARP进程都会收到这个ARP请求分组。主机B的IP地址与ARP请求分组中要查询的IP地址一致，就收下这个分组将其IP地址和物理地址写入ARP高速缓存中，并且向主机A发送ARP响应分组。注意：ARP响应分组时普通的单播，即从一个源地址到一个目的地址。
+
+ARP对保存在高速缓存中的每一个映射地址项目都设有生存时间。ARP解决了同一个局域网的主机或路由器的IP地址和硬件地址的映射问题。
+
+当主机A跟另一个网络的主机B通信时，主机A只需要找到本局域网路由器的物理地址即可，剩下工作交给路由器来完成。（路由器最少处于两个网络中，因此路由器具有多个IP地址）
+
+既然在网络链路上传送的帧最终都是按照硬件地址找到目的主机的，那为什么我们还要使用抽象的IP地址呢?直接使用硬件地址进行通信不就完了。
+由于全世界存在着各式各样的网络，他们使用不同的硬件地址。要使这些异构的网络能够互相通信，就必须进行非常复杂的硬件地址转换工作。
+但是IP编址就把这个复杂问题解决了。连接到互联网的主机只需各自拥有一个唯一的IP地址，他们之间的通信仿佛就连接在同一个网络那样简单方便。
+因此虚拟的IP网络上用的IP地址进行通信，给广大计算机用户带来了很大的方便。
+
+##### 参考材料
+
+https://blog.csdn.net/jiahuan_/article/details/108938107
+
 ## 7.常见的网络问题
 
 ### 7.1 请简述ping一下的原理
