--- a/k8s/笔记/网络.md
+++ b/k8s/笔记/网络.md
@@ -76,6 +76,19 @@ TCP/IP协议结构分为四层：
 
 ## 3.IP地址
 
+##### IP地址（逻辑地址）与物理地址（MAC地址/硬件地址）
+
+物理地址是数据链路层和物理层使用的地址。
+
+而IP地址是网络层和以上各层使用的地址，是一种逻辑地址。IP地址使用软件实现的。
+
+使用IP地址的IP数据报一旦交给了数据链路层，就被封装成了MAC帧了，MAC帧在传送时使用的源地址和目的地址都是硬件地址，这两个硬件地址都写在了MAC帧首部中。
+
+MAC地址在经过不同的网络上传送时，其MAC帧首部中的源地址和目的地址要发生改变。
+
+而IP数据报中的首部源地址和目的地址是不会发生改变的。即IP层抽象的互联网屏蔽了下层这些和复杂的细节。只要我们在网络层上讨论问题，就能够使用统一的，抽象的IP地址研究主机和主机或路由器之间的通信。
+ 
+
 1. 网络地址：IP地址由网络号和主机号组成，网络地址的主机号全为0，网络地址代表着整个网络
 2. 广播地址：也称为直接广播地址，是为了区分受限广播地址，广播地址与网络地址的主机号正好相反，广播地址中，主机号为全1，当向某个网络的广播地址发送消息时，该网络内的所有主机都能收到该广播消息
 3. 组播地址：
@@ -579,3 +592,7 @@ https://blog.csdn.net/jiahuan_/article/details/108938107
 # 参考
 
 https://www.cnblogs.com/maybe2030/p/4781555.html#_label1
+
+[介绍路由器原理](https://blog.csdn.net/jiahuan_/article/details/108938107)
+
+ 
