--- a/架构设计/架构怎么做.md
+++ b/架构设计/架构怎么做.md
@@ -4,9 +4,9 @@
 
 https://blog.csdn.net/hguisu/category_5905793.html
 
-## 一、什么是架构
+## 1、什么是架构
 
-## 二、 框架
+## 2、 框架
 
 1、框架主要有两特性：
 1)、框架是提供基础功能的半成品：已经对基础的代码（例如文件上传，数据库查询）进行了封装并提供相应的API，开发者在使用框架是直接调用封装好的api可以省去很多代码编写，从而提高工作效率和开发速度。
@@ -36,3 +36,73 @@ https://blog.csdn.net/hguisu/category_5905793.html
 平台化：这个其实是最有价值的，如果你作为一个平台产品，其他业务或者兄弟部门的开发同学想集成到你的产品中，那么他在开发测试的时候就很方便的依赖必须的组件，方便调试。这样，在多部门，多team去联合调试的时候，会节省很多的时间，但是这个要求文档必须要够完善，以便于其他人能够很方便的去接入。类似于：支付宝，美团等等平台级的产品。
 编译集成：单个组件化组合成一个产品，可单独开发，测试，发布一个组件。对于编译来说可以很快速的定位问题以及快速编译，打包。
 组件单独测试方便：测试完成后进行集中测试。 
+
+## 3. 顶层结构设计
+
+<img src="images\dingceng.png" style="zoom:60%;" />
+
+
+
+接口设计原则
+
+
+
+**面向对象设计三大核心思想原则：**封装变化点，对接口进行编程，多使用组合而不是继承。
+
+面向对象设计常用的7个原则也基本从上面三大核心原则衍生出来，这些原则也并不是孤立存在的，它们相互依赖，相互补充**。****前5个原则组合称为：SOLID 固定原则**
+
+
+
+## 4.架构设计
+
+架构设计设计文档的目的：
+
+![](images\arc_design_target.png)
+
+
+
+
+
+[架构设计（1）-谈谈架构_hguisu的博客-CSDN博客_架构](https://guisu.blog.csdn.net/article/details/78258430)
+
+[架构设计(7)—如何设计架构和画架构图_](https://guisu.blog.csdn.net/article/details/81661854)  
+
+
+
+总结的主要内容：设计哪些方面？在此过程中应用哪些原则，服务化如何做，组件化如何实施，计划是否顺利实施？在此过程中遇到哪些问题？
+
+1、总体架构
+
+![](images\zongti_arc.png)
+
+
+2、指导原则：
+主要总结项目应用来哪些原则：架构设计不像数据公式或者定律，很难一概而就。很多时候是设计者（架构师）的各种设想，各种权衡折中而符合系统需求的智慧输出。一些好的架构设计原则可以确保设计决策在一定程度上能够满足需求。
+
+比如典型的分布式事务场景，上层应用服务A，完整的事物逻辑如下
+
+事务开启
+  任务1：改数据A // sql 存储
+  任务2：调用系统底层服务接口C // -- 被调服务可能是类似情况
+  任务3：调用外部服务接口D
+提交事务
+由于外部服务接口D不可控，可能会导致事务提交失败。因此上层服务A需要有幂等设计，那么底层服务接口C也有有幂等能力，确保上层服务A可以幂等调用。这就是在做设计的时候要求服务符合业务原则的幂等设计原则和应用设计的无状态原则。
+
+[架构设计（2）-架构设计原则](https://guisu.blog.csdn.net/article/details/78259898)
+
+![](images\arc_design_principle.png)
+
+
+
+ 3、组件化设计
+总结项目使用哪些组件，这些组件的层次结构如何设计：
+
+组件化就是基于可重用的目的，将一个大的软件系统按照分离关注点的形式，拆分成多个独立的组件，已较少耦合。把重复的代码提取出来合并成为一个个组件，组件最重要的就是重用（复用），位于框架最底层，其他功能都依赖于组件，可供不同功能使用，独立性强。
+大部分来说，组件主要分三层：业务组件，基础业务组件以及基础组件，组件之间只能通过接口耦合，也就是依赖倒置原则，每个组件都提供对外的接口文档以描述该组件提供的功能。
+
+[架构师技能2:组件化思想之框架、脚手架、基础应用框架。](https://blog.csdn.net/hguisu/article/details/120248551?spm=1001.2014.3001.5501)
+
+
+
+
+ ![](images\arc_design_cpments.png)
