--- a/安全/安全.md
+++ b/安全/安全.md
@@ -3,6 +3,11 @@
 ## 1.1软件方案
 常见防御体系：
 - 边界防御体系。 就是在网络边界部署防护体系，一旦被攻破就畅通无阻
--  纵深防御体系 。 本质就是多层防御：网络边界-》网络层-》服务器端-》数据库端
+-  纵深防御体系 。 本质就是多层防御：网络边界-》网络层-》服务器端-》数据库端。
+  
+对应的安全产品：
+  1. 数据库端：数据库审计、数据库防火墙
+  2. 服务器端：主机IDS、防火墙、内核加固类产品。
+
 -  
 ## 1.2 硬件方案
