--- a/安全/安全.md
+++ b/安全/安全.md
@@ -9,6 +9,6 @@
   1. 数据库端：数据库审计、数据库防火墙
   2. 服务器端：主机IDS、防火墙、内核加固类产品。
 
--  塔防体系
--  河防体系
+-  塔防体系 本质上也是纵深防御，强调终端也需要纳入安全防御网络中
+-  河防体系。 把对手控制在一个范围内，再用丰富的资源打败他。
 ## 1.2 硬件方案
