--- a/安全/安全.md
+++ b/安全/安全.md
@@ -4,6 +4,14 @@
 常见防御体系：
 - 边界防御体系。 就是在网络边界部署防护体系，一旦被攻破就畅通无阻
 -  纵深防御体系 。 本质就是多层防御：网络边界-》网络层-》服务器端-》数据库端。
+
+纵深防御体系介绍：
+WAF web应用防火墙，是通过执行一些列的针对web安全的策略提供保护的产品。
+
+产品能力不足：
+1. 防护能力不足不足以应对黑产
+2. 缺乏有效的基础业务安全防护能力
+3. 审计能力不足。
   
 对应的安全产品：
   1. 数据库端：数据库审计、数据库防火墙
@@ -11,4 +19,5 @@
 
 -  塔防体系 本质上也是纵深防御，强调终端也需要纳入安全防御网络中
 -  河防体系。 把对手控制在一个范围内，再用丰富的资源打败他。
+  
 ## 1.2 硬件方案
