--- a/安全/安全.md
+++ b/安全/安全.md
@@ -69,5 +69,25 @@ SHA2
 -  微步在线
 -  cymon.io
   根据厂商提供的信息来丰富自己的信息
+### 业务安全
+典型业务安全问题：
+- 垃圾注册
+- 盗用账户
+- 木马钓鱼
+- 恶意刷单
+- 恶意炒信，恶意炒信用，欺骗用户
+- 点击作弊
+- 失信名单
+- 短信炸弹
+
+### API安全
+开源软件KONG，管理API  授权、限流
+
+### 风控系统 Nebula 
+用于账号体系的风控审计和攻击侦测
+
+### 代码审计
+
+
 
 ## 1.2 硬件方案
