--- a/安全/安全.md
+++ b/安全/安全.md
@@ -87,7 +87,15 @@ SHA2
 用于账号体系的风控审计和攻击侦测
 
 ### 代码审计
+开源代码审计：RIPS 、 VGC
 
+#### RIPS
+ 一款具有较强漏洞挖掘能力的自动化代码审计工具
+ - 能够检测xss、SQL注入，文件泄露、远程命令执行
+ - 标记存在漏洞代码行
+
+#### VGC
+基于字典的检测工具
 
 
 ## 1.2 硬件方案
