--- a/安全/安全.md
+++ b/安全/安全.md
@@ -100,7 +100,19 @@ SHA2
 ###  蜜罐 与欺骗
 #### 蜜罐
 - ssh 蜜罐开源软件kippo 
+- elasticsearch 服务的蜜罐Elasticpot
+-  RDP 蜜罐服务 rdpy-rdphoneypot
+  作用就是
+- Beeswarm 是一款主动的诱骗攻击者的工具
 
 
 
 ## 1.2 硬件方案
+
+# 安全相关工具
+
+## 端口扫描
+- Nikto 
+
+
+#  场景解决方案
