--- a/安全/安全.md
+++ b/安全/安全.md
@@ -105,6 +105,13 @@ SHA2
   作用就是
 - Beeswarm 是一款主动的诱骗攻击者的工具
 
+### 态势感知
+天使感知是一种基于环境的动态、整体的感知安全风险的能力，是以安全大数据为机车，从全局视角提升对安全威胁的发现识别、理解和分析响应处置能的一种方式。
+
+包括：漏洞扫描、入侵感知、以及安全可视化、敏感信息泄露监控
+
+#### 漏洞扫描
+常见开源web免费扫描工具：
 
 
 ## 1.2 硬件方案
