--- a/安全/安全.md
+++ b/安全/安全.md
@@ -113,6 +113,10 @@ SHA2
 #### 漏洞扫描
 常见开源web免费扫描工具：
 
+- SQLmap 是一款免费检测sql注入的工具、检测自动化
+- acunetix Web Vulnerability Scanner 商业级别的web漏洞扫描程序，检测web应用程序的漏洞、SQL 注入XSS、身份认证的弱口令等。
+- IBM Security AppScan 是一款很不错的web安全扫描工具
+
 
 ## 1.2 硬件方案
 
