--- a/安全/安全.md
+++ b/安全/安全.md
@@ -117,6 +117,11 @@ SHA2
 - acunetix Web Vulnerability Scanner 商业级别的web漏洞扫描程序，检测web应用程序的漏洞、SQL 注入XSS、身份认证的弱口令等。
 - IBM Security AppScan 是一款很不错的web安全扫描工具
 
+web扫描实践中的不足：
+- 对API的支持差
+- 爬虫能力偏弱
+- 自动化能力弱
+- 缺乏基础的业务安全检测能力
 
 ## 1.2 硬件方案
 
