--- a/操作系统/计算组成原理.md
+++ b/操作系统/计算组成原理.md
@@ -1,207 +1,2 @@
-# 操作系统
-
-## 核心思想、技术
-- 程序执行、多进程、程序带动其他设备执行的基本结构
--  增加用户使用体验度、编程环境、图形界面
-
-## 1.基础知识
-
-解释一下操作系统的主要目的是什么
-
-操作系统是一种软件，它的主要目的有三种
-
-管理计算机资源，这些资源包括 CPU、内存、磁盘驱动器、打印机等。
-
-提供一种图形界面，就像我们前面描述的那样，它提供了用户和计算机之间的桥梁。
-
-为其他软件提供服务，操作系统与软件进行交互，以便为其分配运行所需的任何必要资源。
-
-计算机如何工作
-
-程序放入内存，有一个指针IP指向指令，cpu执行该地址的程序返回结果（取指执行）
-
-x86:
-- x86 PC刚开机时cpu处于是实式
-
-#### 启动过程：
-
-- 引导扇区：
-引导扇区的代码是汇编代码，bootsect.s
-![img](images/bootsec.png)  
-
-
-
-- 加载 setup 即日
-  ![img](images/os_setup.jpg) 
-
-  - 初始化gdt 表
-  -  读取配置参数
-  -  head 系统初始化
- ![img](images/os_head.jpg) 
-
--  system 模块执行
-  
-
-
-- 加载操作系统
-
-系统调用
-
-- int 0x80  是什么
-  是一个中断，去idt表中找0x80 的程序去执行
- ![img](images/os_sys_call.png) 
-
-## 多进程图谱
-CPU 怎么切换任务，只需要切PC地址，还需要保存切换任务的时候运行状态，状态存储在PCB中
-
-### 进程
-
-进程如何切换：
-包括指令和数据的切换
-
-创建线程的时候做成能切换的状态，需要有用户栈、线程栈、PCB
-
-### CPU 如何切
-
-copy_process
-![img](images/os_switch_to.jpg) 
-
-cpu 调度
-
-前台任务关注响应，后台任务关注周转时间
-
-IO密集任务
-CPU密集型任务
-
-IO密集型任务相对于CPU密集任务优先级应该高
-CPU调度算法：
-- 按时间片来执行
-  时间片大：响应时间太长；时间片太小影响吞吐量
-
-  Counter 
-- 短作业优先
-- 定义优先级
-信号量：
-
-什么是临界区？
-
-怎么进入临界区：
-- 轮换法 
--  互斥进入
--  有空让进
--  有限等待
-信号量修改 需要在临界区保护
-
-死锁
-根本原因，环路等待，互相等待对方释放资源，就造成了死锁
-
-形成死锁的必要条件：
-- 互斥使用
-- 不可抢占
-- 请求和保持资源
-- 循环等待
-  
-死锁处理方法：
-- 死锁预防： 破坏处理死锁处理的条件
-  - 一次申请所有需要的资源 
-    缺点：需要预知未来，编程困难；资源申请之后很长时间才能用，资源使用效率低
-  - 资源按顺序申请
-    缺点：资源申请低
-- 死锁避免 ： 检测资源如果造成死锁就拒绝
-  - 银行家算法：用于检测是否所有的序列能执行完成
-- 死锁检测+恢复： 检测到死锁让一些进程回滚
-  - 发现CPU利用率低的时候发起检测，如果发现死锁，进程回滚
-- 死锁忽略： 
-
-### 内存管理
-修改程序中的地址：
-- 编译的时候指定
--  载入的时候修改
--  运行时重定位
-   -  每个基地址放在PCB中，执行指令第一步先从PCB中取出来这个基地址
-
-程序的执行：
-- 找到一块空闲的内存，取出来基地址
-- 放入程序，把基地址写入PCB
-- 取指执行的时候加上基地址，从而找到对应的数据
-  ![img](images/os_mermory_manage.jpg) 
-
-swap：
-把睡眠的进程从内存中刷到磁盘
-
-#### 分段
-
-程序在内存中是分段存储的，而不是存储在一起：
- ![img](images/os_program_segement.jpg) 
-
-GDT： 是操作系统的段表
-LDT：是每个进程的段表
-![img](images/os_seg_gdt.jpg) 
-
-#### 分区
-固定分区和可变分区
-内存分配方法：
-- 首先适配
-- 最佳适配
-- 最差适配
-
-内存碎片处理：内存紧缩，内存移动，耗费时间太长
-
-#### 分页
-把内存分成固定大小的一块一块，是为了解决内存碎片的问题，也就不需要内存紧缩
-
-多级页表：
-内存实际使用多级目录查找逻辑页，来进行管理。
-多级页表提高空间使用效率，降低了时间效率
-
-
-
-添加虚拟内存作为段和页的映射
-![img](images/os_seg_page_translate.jpg) 
-
-段页存在需要重定位：
-![img](images/os_seg_page_translate.jpg) 
-
-段页管理的实现：
-
-
-内存换入：
-![img](images/os_call_page.jpg) 
-lru 的准确实现，使用时间戳
-
-内存换入换出
-
-![img](images/os_swap_inout.jpg) 
-
-以多进程驱动的内存分配的多进程持续推进的软件系统
-
-IO设备：操作系统如何管理IO
-![img](images/os_overview.jpg) 
-
-tty_write -> 缓冲区-> con_write 读取字符并写
-
-## grub
-GRUB 是一个引导加载程序，可以引导各种各样的操作系统
-
-保护模式： 
-
- ![img](images/os_safemode.jpg) 
-
-保护模式下地址翻译,
-
-
-## 寄存器
-
-
-# 参考材料
- 哈工大《操作系统》实验：
-https://github.com/hoverwinter/HIT-OSLab
-网易云课堂：
-https://study.163.com/series/1001245004.htm
-
-
-
-
-
-# 常见问题总结
-
+# 计算机组成原理
+主要分析计算机硬件的逻辑实现，基本操作原理
