计算机组成原理

--- a/操作系统/计算组成原理.md
+++ b/操作系统/计算组成原理.md
@@ -4,3 +4,11 @@
 指令解释执行流程
 
 ![img](images/computer_comand_inerpreter.jpg)
+
+存储器的基本组成：
+![img](images/computer_store.jpg)
+
+MAR:存储器地址寄存器 反映存储单元的个数
+MDR ：存储器数据寄存器 反映存储字长
+
+运算器基本结构：
