--- a/操作系统/计算组成原理.md
+++ b/操作系统/计算组成原理.md
@@ -18,3 +18,12 @@ MDR ：存储器数据寄存器 反映存储字长
 
 ## 系统总线
 总线是连接各个部件的信息传输线，是各个设备部件的共享传输介质
+
+## 总线的分类
+- 片内总线 芯片内部总线
+- 系统总线 系统各部直接的链接总线
+  - 数据总线
+  - 地址总线
+  - 控制总线
+- 通信总线
+
