--- a/操作系统/计算组成原理.md
+++ b/操作系统/计算组成原理.md
@@ -31,4 +31,17 @@ MDR ：存储器数据寄存器 反映存储字长
 - 同步通信
   - 定宽 定距的定时标 控制数据传输
   - 
-- 
+
+分离式通信：
+- 各模块均有权申请占用总线
+- 采用异步方式不等对方回答
+- 各模块准备数据时候不占用总线
+- 总线被占用无空闲
+
+存储器分类：
+- 按介质分类
+  - 半导体 TTL、mos 数据易丢失
+  - 磁表面存储器
+  - 磁芯存储器
+  - 光盘存储器
+  
