--- a/k8s/笔记/存储.md
+++ b/k8s/笔记/存储.md
@@ -1,6 +1,12 @@
 # 存储相关
 
-磁盘数据写入方式：
+## 容灾和备份的区别
+  - 容灾的对象一般是大批量的数据，例如主用数据中心中的所有的生产数据，核心业务数据等，需要在主用数据中心或者主用业务链路出现故障时进行大范围大批量的数据迁移，以保证业务数据的不丢失和整体业务的连续性
+  - 备份相对于容灾来说需要备份的数据是比较小规模的，具有明确的针对性的数据，比如针对某一个可靠性要求较高的业务数据或者某一个租户的数据等。
+## 存储方案
+
+
+## 磁盘数据写入方式：
 
 -  buffer io
    -  使用Buffer I/O的时候才在内存与磁盘中间加了一层page cache。
@@ -17,3 +23,16 @@
    -  Linux允许应用程序在执行磁盘IO时绕过缓冲区高速缓存，从用户空间直接将数据传递到文件或磁盘设备，称为直接IO（direct IO）或者裸IO（raw IO）
    -  优点：如果要传输的数据量很大，降低数据在page cache中的拷贝带来的开销，提高性能。
 缺点：Direct I/O的开销大，因为没有page cache的使用，因此内核中很多对page cache的优化也无法使用（例如：按顺序预读取，在成簇磁盘块上执行IO，允许访问同一文件的多个进程共享高速缓存的缓冲区等）
+
+## RAID
+
+
+## 硬盘类型：
+### SSD
+### SAS
+### NL-SAS
+
+## RAID2.0+
+
+
+
