--- a/k8s/笔记/存储.md
+++ b/k8s/笔记/存储.md
@@ -34,5 +34,19 @@
 
 ## RAID2.0+
 
+### 传统RAID
+基于硬盘做RAID组（确认RAID级别）   直接由硬盘构成LUN
+        热备使用专门的热备盘
+        重构时     多对一     无论磁盘空间是否占满，都会重构整个磁盘
 
 
+RAID1.5      先做RAID，再进行LUN化
+
+重构时     多对一      无论磁盘空间是否占满，都会重构整个磁盘
+
+RAID2.0     先做逻辑块组成LUN，再将LUN做RAID
+  块虚拟化   将硬盘切为多个逻辑块，再将逻辑块组成LUN（每个逻辑块都来自不同的硬盘）
+
+         基于LUN做RAID组（确认RAID级别）   即每个LUN就是一个RAID组
+
+         重构时      多对多       重构时只重构硬盘使用的部分
