--- a/k8s/笔记/存储.md
+++ b/k8s/笔记/存储.md
@@ -33,3 +33,24 @@ https://zhuanlan.zhihu.com/p/506835089
 （3）NFS属无状态协议，而CIFS属有状态协议；NFS受故障影响小，可以自恢复交互过程，CIFS不行；从传输效率上看，CIFS优于NFS，没用太多冗余信息传送；
 
 （4）两协议都需要文件格式转换，NFS保留了unix的文件格式特性，如所有人、组等等；CIFS则完全按照win的风格来作。
+
+
+
+
+
+# 存储系统架构演变
+
+https://sunjian.blog.csdn.net/article/details/125111808
+
+
+
+# SmartThin
+
+https://blog.csdn.net/sj349781478/article/details/125116173
+
+
+
+## RTO和RPO
+
+
+
