--- a/k8s/笔记/存储.md
+++ b/k8s/笔记/存储.md
@@ -54,3 +54,28 @@ https://blog.csdn.net/sj349781478/article/details/125116173
 
 
 
+# 完全备份、增量备份和差异备份的区别在哪里？
+
+![](images\backup.png)\
+
+
+
+# 热备、冷备、双活
+
+**两地 = 本地 + 异地**
+
+**三中心 = 本地中心 + 本地容灾中心 +异地备份中心**
+
+主备数据中心之间一般有热备、冷备、双活三种备份方式。
+
+**热备**的情况下，只有主数据中心承担用户的业务，在**不停机情况下**对主数据中心进行备份。
+
+**冷备**的情况下，也是只有主数据中心承担业务，在**停机情况下**对主数据中心进行备份。
+
+**双活**是觉得备用数据中心只做备份太浪费了，所以让主备两个数据中心都同时承担用户的业务，此时，主备两个数据中心互为备份，并且进行实时备份。一般来说，主数据中心的负载可能会多一些，比如分担60~70%的业务，备数据中心只分担40%~30%的业务 。
+
+
+
+# [共享存储、C/S和B/S架构、存储的分类和区别（SAN、NAS、DAS）、存储共享的过程](https://www.cnblogs.com/yunjisuanchengzhanglu/p/16040054.html)
+
+https://www.cnblogs.com/yunjisuanchengzhanglu/p/16040054.html
