--- a/k8s/笔记/存储.md
+++ b/k8s/笔记/存储.md
@@ -113,3 +113,13 @@ https://www.cnblogs.com/yunjisuanchengzhanglu/p/16040054.html
 ### NL-SAS
 
 ## RAID2.0+
+
+
+
+
+
+**TOE网卡和iSCSI HBA卡有什么区别**
+
+TOE网卡是指带有TOE功能的网卡。TOE是TCP/IP Offload Engine的缩写，它是网卡采用的一种新技术，采用TOE技术的网卡自身支持TCP/IP协议栈的处理，这样能够减轻应用服务器的处理负担。TOE网卡通常用于高速网络接口，如千兆和万兆网络。
+
+iSCSI HBA（Host Bus Adapter）卡是专用的连接iSCSI设备的主机适配卡，它支持TOE的同时还支持对iSCSI协议的处理，能够更进一步的减轻应用服务器的处理负担
