--- a/k8s/笔记/存储.md
+++ b/k8s/笔记/存储.md
@@ -78,6 +78,10 @@ https://blog.csdn.net/sj349781478/article/details/125116173
 
 # [共享存储、C/S和B/S架构、存储的分类和区别（SAN、NAS、DAS）、存储共享的过程](https://www.cnblogs.com/yunjisuanchengzhanglu/p/16040054.html)
 
+
+
+
+
 https://www.cnblogs.com/yunjisuanchengzhanglu/p/16040054.html
 =======
 ## 容灾和备份的区别
@@ -123,3 +127,46 @@ https://www.cnblogs.com/yunjisuanchengzhanglu/p/16040054.html
 TOE网卡是指带有TOE功能的网卡。TOE是TCP/IP Offload Engine的缩写，它是网卡采用的一种新技术，采用TOE技术的网卡自身支持TCP/IP协议栈的处理，这样能够减轻应用服务器的处理负担。TOE网卡通常用于高速网络接口，如千兆和万兆网络。
 
 iSCSI HBA（Host Bus Adapter）卡是专用的连接iSCSI设备的主机适配卡，它支持TOE的同时还支持对iSCSI协议的处理，能够更进一步的减轻应用服务器的处理负担
+
+
+
+# 存储基础：LUN、ThickLUN与Thin LUN的联系和区别
+
+原文链接：https://blog.csdn.net/M_joy666/article/details/80566705
+
+一、基本概念
+
+       LUN：全称是Logical Unit Number，中文名是逻辑单元号。LUN是在存储设备上可以被应用服务器识别的独立存储单元。一个LUN的空间来源于存储池Pool，Pool的空间来源于组成磁盘阵列的若干块硬盘。从应用服务器的角度来看，一个LUN可以被视为一块可以使用的硬盘。例如，在Linux系统中，它在/dev/rdsk、/dev/dsk目录下有相应的设备名称；在Windows系统中，格式化后的新LUN会对应一个类似于D E F的盘符。
+    
+      Thick LUN：中文名是传统非精简LUN，是LUN类型的一种，支持虚拟资源分配，能以较为简便的方式进行创建、扩容和压缩操作。Thick LUN在创建完成后就会从存储池Pool中分配满额的存储空间，即LUN的大小完全等于分配的空间。因此，它拥有较高的可预测性。
+    
+      Thin LUN：中文名是精简LUN，也是LUN类型的一种，支持虚拟资源分配，能够以较简便的方式进行创建、扩容和压缩操作。Thin LUN在创建的时候，可以设置一个初始分配容量。创建完成后，存储池Pool只会分配这个初始容量大小的空间剩余的空间仍然放在存储池中。当Thin LUN已分配的存储空间的使用率达到阈值时，存储系统才会再从Pool中划分一定的配额给Thin LUN。如此反复，直到达到Thin LUN最初设定的全部容量。因此，它拥有较高的存储空间利用率。
+
+二、Thick LUN与Thin LUN的区别
+
+ 1、空间分配上的区别
+
+Thick LUN在创建时会分配所有需要的空间
+Thin LUN是一种按需分配的空间组织方法，它在创建时存储池不会分配所有需要的空间，而是根据使用情况动态分配。
+    二者的空间分配区别如下图所示：
+
+
+
+ 2、空间回收的区别
+
+  注：这里的空间回收指的是释放存储池Pool中的资源，并且这些资源可以被其他LUN使用。
+
+Thick LUN没有空间回收的概念，因为它在创建时就占用存储池中所有分配给它的空间，即使Thick LUN中的数据被删除，存储池中分配给它的空间还是被占用，不能被其他的LUN使用。但是如果手动删除不再使用的Thick LUN，则对应的空间会被回收。
+Thin LUN不仅能够做到空间占用率增大时自动分配新的存储空间，而且当Thin LUN中的文件删除时也可以实现空间的释放，从而实现存储空间的反复利用，大大提高存储空间的利用率。Thin LUN的空间回收如下图所示：
+
+ 3、性能的区别
+
+Thick LUN由于在一开始就会拥有所分配的空间，所以Thick LUN在顺序读写的时候拥有较高的性能，但是会造成空间资源的浪费。
+Thin LUN由于是实时分配空间，每次扩容时，需要重新增加容量，后台重新格式化，这个时候性能会受到一定影响，而且每次分配空间可能会导致硬盘中存储空间不连续，这样硬盘读写数据时在寻找存放位置上花费的时间会较多，会在顺序读写时对性能有一定影响。
+ 4、使用场景的区别
+
+Thick LUN：①对性能要求较高的场景；②对存储空间利用率不太敏感的场景；③对成本要求不太高的场景。
+Thin LUN：①对性能要求一般的场景；②对存储空间利用率比较敏感的场景；③对成本比较敏感的场景；④应用环境很难预 估存储空间的场景
+三、总结
+
+      总而言之，Thick LUN和Thin LUN各有特点。Thick LUN的性能较高，但是会造成空间资源的浪费；Thin LUN可以灵活配置使用存储池中的空间，但是会导致分配的存储空间不连续，所以性能不高。具体使用哪一种还需视情况而定。
