--- a/k8s/笔记/存储.md
+++ b/k8s/笔记/存储.md
@@ -1,5 +1,37 @@
 # 存储相关
 
+## 存储方案
+
+DAS（直连存储）
+　　是一种存储设备与服务器直接相连的架构。DAS为服务器提供块级的存储服务（不是文件系统级）。
+DAS分为内部DAS和外部DAS两类：
+内部DAS：
+　　在内部DAS架构中，存储设备通过服务器机箱内部的并行或串行总线连接到服务器上。但是，物理的总线有距离限制，只能支持短距离的高速数据传输。此外，很多内部总线能连接的设备数目也有限，并且将存储设备放在服务器机箱内部，也会占用大量的空间 ，对服务器其它部件的维护造成困难。
+外部DAS：
+　　在外部DAS结构中，服务器与外部的存储设备直接相连。在大多数情况下，他们之间通过FC协议或者SCSI协议进行通信。与内部DAS相比，外部DAS克服了内部DAS对连接设备的距离和数量的限制。另外，外部DAS还可以提供存储设备集中化管理，更加方便。
+NAS（网络附加存储）
+　　是连接到一个局域网的基于IP的文件共享设备。NAS通过文件级的数据访问和共享提供存储资源，使客户能够以最小的存储管理开销快速直接共享文件；采用NAS可以不用建立多个文件服务器，是首选的文件共享存储解决方案； NAS还有助于消除用户访问通用服务器时的瓶颈；NAS使用网络和文件共享协议进行归档和存储，这些协议包括进行数据传输的TCP/IP和提供远程文件服务的CIFS（通用网络文件系统）、NFS（网络文件系统）。注意：采用NAS共享的时候，UNIX通常使用用NFS，Windows使用CIFS。
+拓展：
+　　随着网络技术的发展，NAS扩展到用于满足企业访问数据高性能和高可靠性的需求。 NAS设备是专用的、高性能的、高速的、单一用途的文件服务和存储系统。
+SAN（存储区域网络）
+　　是一个用在服务器和存储资源之间的、专用的、高性能的网络体系。它为了实现大量原始数据的传输而进行了专门的优化。因此，可以把FC SAN看成是对SCSI协议在长距离应用上的扩展（原先的SCSI协议最大的传输距离是6米）。FC SAN使用的典型协议组是SCSI和Fiber Channel 。 Fiber Channel特别适合这项应用，原因在于一方面它可以传输大块数据，另一方面它能够实现远距离传输。
+实现IP SAN的典型协议是iSCSI，它定义了SCSI指令集在IP网络中传输的封装方式。
+拓展：
+　　SAN和NAS最大的区别就是NAS可以给计算节点提供文件系统 对于结算节点来说，拿到的直接就是可以共享的文件夹（共享目录）一样的感觉，但是SAN方案给计算节点提供的是一个裸盘，是无法直接进行使用的，需要对其进行格式化分区，部署文件系统等等操作以后才可以使用。 
+
+## 数据与信息
+
+​        数据和信息是相互联系的，数据是反映客观事务属性的记录，是信息的具体表现形式。而数据经过处理和加工以后就变成信息，而信息是需要经过数字化处理转变成数据记才能进行存储和传输。
+信息论观点：
+​        数据=信息+数据冗余
+简而言之：
+​        信息就是数据中包含的有用的东西。
+​        从数据中经过用户指定的规则或者特定需求场景下提炼出来的信息能够为企业带来以下好处：
+
+市场以及客户行为的信息
+更高效的运营业务
+帮助确定风险因素 
+
 ## RAID 
 
 ### 基本原理
@@ -80,7 +112,7 @@ https://blog.csdn.net/sj349781478/article/details/125116173
 
 
 
-
+DAS（Direct Attached Storage—直接连接存储），是指将存储设备通过SCSI接口或[光纤通道](http://baike.baidu.com/view/15247.htm)直接连接到服务器上
 
 https://www.cnblogs.com/yunjisuanchengzhanglu/p/16040054.html
 =======
@@ -170,3 +202,13 @@ Thin LUN：①对性能要求一般的场景；②对存储空间利用率比较
 三、总结
 
       总而言之，Thick LUN和Thin LUN各有特点。Thick LUN的性能较高，但是会造成空间资源的浪费；Thin LUN可以灵活配置使用存储池中的空间，但是会导致分配的存储空间不连续，所以性能不高。具体使用哪一种还需视情况而定。
+
+
+
+
+| HyperSnap        | 就是快照，有COW和ROW；                                       |
+| ---------------- | ------------------------------------------------------------ |
+| HyperClone       | 分主LUN，从LUN；从生产数据中快速复制出副本，并独立共享给应用服务器读写，用于测试、分析或者容灾演练等应用，同时不影响生产数据。 主要的点，在于 目标LUN是立刻可读写的，不需要等待后台拷贝完成； 当源LUN损坏之后，目标LUN可以反向同步数据到源LUN完成数据恢复； |
+| HyperCopy        | LUN拷贝会将所有数据进行完整地复制，需要暂停该LUN的业务。     |
+| HyperMirror      | ● 对一个LUN提供两个镜像物理副本，这两个副本中的数据是完全一样的。当其中的一个镜像副本出现故障时，LUN上的业务不受任何影响，主机侧仍然可以毫无感知的正常工作。● 这个被持续保护的LUN可以是OceanStor系列存储系统（以下简称为本端存储系统）的LUN，也可以是第三方存储系统（以下简称异构存储系统）的LUN。 |
+| HyperReplication | 指的是远程复制，主要是为了异地冗余；远程复制支持以下两种复制模式：● 同步远程复制实时地同步数据，最大限度保证数据的一致性，以减少灾难发生时的数据丢失量。● 异步远程复制周期性地同步数据，最大限度减少由于数据远程传输的时延而造成的业务性能下降。 是用于主备容灾，通过将源LUN与目标LUN建立pair关系，来进行数据同步； |
