--- a/k8s/笔记/存储.md
+++ b/k8s/笔记/存储.md
@@ -19,6 +19,26 @@ SAN（存储区域网络）
 拓展：
 　　SAN和NAS最大的区别就是NAS可以给计算节点提供文件系统 对于结算节点来说，拿到的直接就是可以共享的文件夹（共享目录）一样的感觉，但是SAN方案给计算节点提供的是一个裸盘，是无法直接进行使用的，需要对其进行格式化分区，部署文件系统等等操作以后才可以使用。 
 
+FusionStorage采用的就是DHT算法，具有以下特点：
+　　均衡性：数据能够尽可能分布到所有的节点中，这样可以使得所有节点负载均衡。
+　　单调性：当有新节点加入系统中，系统会重新做数据分配，数据迁移仅涉及新增节点，现有节点上的数据不需要做很大调整。
+ETL
+　　是英文Extract-Transform-Load的缩写，用来描述将数据从来源端经过抽取（extract）、转换（transform）、加载（load）至目的端的过程。
+
+## 结构化数据与非结构化数据
+
+　　结构化数据也称作行数据，是由二维表结构来逻辑表达和实现的数据，严格地遵循数据格式与长度规范，主要通过关系型数据库进行存储和管理。
+　　与结构化数据相对的是不适于由数据库二维表来表现的非结构化数据，包括所有格式的办公文档、XML、HTML、各类报表、图片和音频、视频信息等。支持非结构化数据的数据库采用多值字段、了字段和变长字段机制进行数据项的创建和管理，广泛应用于全文检索和各种多媒体信息处理领域。
+半结构化数据　
+　　比如存储员工的简历。不像员工基本信息那样一致每个员工的简历大不相同。有的员工的简历很简单，比如只包括教育情况；有的员工的简历却很复杂，比如包括工作情况、婚姻情况、出入境情况、户口迁移情况、党籍情况、技术技能等等。还有可能有一些我们没有预料的信息。
+　　半结构化数据中结构模式附着或相融与数据本身，数据自身就描述了其相应结构模式。具体来说，半结构化数据具有下述特征：
+（1）数据结构自描述性。结构与数据相交融，在研究和应用中不需要区分“元数据”和“一般数据”（两者合二为一）。
+（2）数据结构描述的复杂性。结构难以纳入现有的各种描述框架，实际应用中不易进行清晰的理解与把握。
+（3）数据结构描述的动态性。数据变化通常会导致结构模式变化，整体上具有动态得结构模式。
+ 
+
+
+
 ## 数据与信息
 
 ​        数据和信息是相互联系的，数据是反映客观事务属性的记录，是信息的具体表现形式。而数据经过处理和加工以后就变成信息，而信息是需要经过数字化处理转变成数据记才能进行存储和传输。
