--- a/k8s/笔记/存储.md
+++ b/k8s/笔记/存储.md
@@ -35,7 +35,6 @@ ETL
 （1）数据结构自描述性。结构与数据相交融，在研究和应用中不需要区分“元数据”和“一般数据”（两者合二为一）。
 （2）数据结构描述的复杂性。结构难以纳入现有的各种描述框架，实际应用中不易进行清晰的理解与把握。
 （3）数据结构描述的动态性。数据变化通常会导致结构模式变化，整体上具有动态得结构模式。
- 
 
 
 
@@ -48,9 +47,9 @@ ETL
 ​        信息就是数据中包含的有用的东西。
 ​        从数据中经过用户指定的规则或者特定需求场景下提炼出来的信息能够为企业带来以下好处：
 
-市场以及客户行为的信息
-更高效的运营业务
-帮助确定风险因素 
+​		市场以及客户行为的信息
+​		更高效的运营业务
+​		帮助确定风险因素 
 
 ## RAID 
 
@@ -232,3 +231,86 @@ Thin LUN：①对性能要求一般的场景；②对存储空间利用率比较
 | HyperCopy        | LUN拷贝会将所有数据进行完整地复制，需要暂停该LUN的业务。     |
 | HyperMirror      | ● 对一个LUN提供两个镜像物理副本，这两个副本中的数据是完全一样的。当其中的一个镜像副本出现故障时，LUN上的业务不受任何影响，主机侧仍然可以毫无感知的正常工作。● 这个被持续保护的LUN可以是OceanStor系列存储系统（以下简称为本端存储系统）的LUN，也可以是第三方存储系统（以下简称异构存储系统）的LUN。 |
 | HyperReplication | 指的是远程复制，主要是为了异地冗余；远程复制支持以下两种复制模式：● 同步远程复制实时地同步数据，最大限度保证数据的一致性，以减少灾难发生时的数据丢失量。● 异步远程复制周期性地同步数据，最大限度减少由于数据远程传输的时延而造成的业务性能下降。 是用于主备容灾，通过将源LUN与目标LUN建立pair关系，来进行数据同步； |
+
+# SCSI、FC、iSCSI三大协议详解及比较
+
+**一、SCSI**
+
+
+
+SCSI是小型计算机系统接口（Small Computer System Interface）的简称，于1979首次提出，是为小型机研制的一种接口技术，现在已完全普及到了小型机，高低端服务器以及普通PC上。
+
+SCSI可以划分为SCSI-1、SCSI-2、SCSI-3，最新的为SCSI-3，也是目前应用最广泛的SCSI版本。 
+
+1、SCSI-1：1979年提出，支持同步和异步SCSI外围设备；支持7台8位的外围设备，最大数据传输速度为5MB/s。 
+2、SCSI-2：1992年提出，也称为Fast SCSI，数据传输率提高到20MB/s。 
+3、SCSI-3：1995年提出，Ultra SCSI（Fast-20）。Ultra 2 SCSI（Fast-40）出现于1997年，最高传输速率可达80MB/s。1998年9月，Ultra 3 SCSI（Utra 160 SCSI）正式发布，最高数据传输率为160MB/s。Ultra 320 SCSI的最高数据传输率已经达到了320MB/s。
+
+二、FC（光纤通道）
+
+FC光纤通道：用于计算机设备之间数据传输，传输率达到2G（将来会达到4G）。光纤通道用于服务器共享存储设备的连接，存储控制器和驱动器之间的内部连接。
+
+协议基本架构： 
+FC-4 Upper Layer Protocol:SCSI,HIPPI,SBCCS,802.2,ATM,VI,IP 
+FC-3 common service 
+FC-2 Framing Protocol /Flow Control 
+FC-1 Encode/Decode 
+FC-0 Media:Optical or copper,100MB/sec to 1.062GB/sec
+
+协议层说明： 
+FC-0：物理层，定制了不同介质，传输距离，信号机制标准，也定义了光纤和铜线接口 
+以及电缆指标 
+FC-1：定义编码和解码的标准 
+FC-2：定义了帧、流控制、和服务质量等 
+FC-3：定义了常用服务，如数据加密和压缩 
+FC-4：协议映射层，定义了光纤通道和上层应用之间的接口，上层应用比如：串行SCSI 协 议，HBA 的驱动提供了FC-4 的接口函数，FC-4 支持多协议，如：FCP-SCSI,　FC-IP,FC-VI
+
+协议简介： 
+FCP-SCSI：是将SCSI并行接口转化为串行接口方式的协议，应用于存储系统和服务器之间的数据传输。新的ANSI T10 标准，支持SAN 上存储系统之间通过数据迁移应用来直接移动数据。 FCP-SCSI 提供200MB/s（全双工独占带宽）的传输速率，每连接最远达10 公里，最大16000000 个节点。FCP-SCSI 使用帧传输取代块传输。帧传输以大数据流传输方式传输短的小的事务数据。
+
+三、iSCSI
+
+
+
+iSCSI（互联网小型计算机系统接口）是一种在TCP/IP上进行数据块传输的标准。它是由Cisco和IBM两家发起的，并且得到了各大存储厂商的大力支持。iSCSI可以实现在IP网络上运行SCSI协议，使其能够在诸如高速千兆以太网上进行快速的数据存取备份操作。
+
+iSCSI标准在2003年2月11日由IETF（互联网工程任务组）认证通过。iSCSI继承了两大最传统技术：SCSI和TCP/IP协议。这为iSCSI的发展奠定了坚实的基础。基于iSCSI的存储系统只需要不多的投资便可实现SAN存储功能，甚至直接利用现有的TCP/IP网络。相对于以往的网络存储技术，它解决了开放性、容量、传输速度、兼容性、安全性等问题，其优越的性能使其备受始关注与青睐。
+
+工作流程： 
+iSCSI系统由SCSI适配器发送一个SCSI命令。 
+命令封装到TCP/IP包中并送入到以太网络。 
+接收方从TCP/IP包中抽取SCSI命令并执行相关操作。 
+把返回的SCSI命令和数据封装到TCP/IP包中，将它们发回到发送方。 
+系统提取出数据或命令，并把它们传回SCSI子系统。
+
+安全性描述： 
+iSCSI协议本身提供了QoS及安全特性。 
+可以限制initiator仅向target列表中的目标发登录请求，再由target确认并返回响应，之后才允许通信。 
+通过IPSec将数据包加密之后传输，包括数据完整性、确定性及机密性检测等。
+
+iSCSI的优势： 
+（1）广泛分布的以太网为iSCSI的部署提供了基础。 
+（2）千兆/万兆以太网的普及为iSCSI提供了更大的运行带宽。 
+（3）以太网知识的普及为基于iSCSI技术的存储技术提供了大量的管理人才。 
+（4）由于基于TCP/IP网络，完全解决数据远程复制（Data Replication）及灾难恢复（Disaster Recover）等传输距离上的难题。 
+（5）得益于以太网设备的价格优势和TCP/IP网络的开放性和便利的管理性，设备扩充和应用调整的成本付出小。
+
+
+
+四、iSCSI和FC的比较
+
+从传输层看，光纤通道的传输采用其FC协议，iSCSI采用TCP/IP协议。
+
+FC协议与现有的以太网是完全异构的，两者不能相互接驳。因此光纤通道是具有封闭性的，而且不仅与现有的企业内部网络（以太网）接入，也与其他不同厂商的光纤通道网络接入（由于厂家对FC标准的理解的异样，FC设备的兼容性是一个巨大的难题）。因此，对于以后存储网络的扩展由于兼容性的问题而成为了难题。而且，FC协议由于其协议特性，网络建完后，加入新的存储子网时，必须要重新配置整个网络，这也是FC网络扩展的障碍。
+
+iSCSI基于的TCP/IP协议，它本身就运行于以太网之上，因此可以和现有的企业内部以太网无缝结合。TCP/IP网络设备之间的兼容性已经无需讨论，迅猛发展的internent网上运行着全球无数家网络设备厂商提供的网络设备，这是一个最好的佐证。 
+
+**![img](https://img-blog.csdn.net/2018052414444993)**
+
+
+
+从网络管理的角度看，运行FC协议的光网络，其技术难度相当之大。其管理采用了专有的软件，因此需要专门的管理人员，且其培训费用高昂。TCP/IP网络的知识通过这些年的普及，已有大量的网络管理人才，并且，由于支持TCP/IP的设备对协议的支持一致性好，即使是不同厂家的设备，其网络管理方法也是基本一致的。
+
+FC运行于光网络之上，其速度是非常快的，现在已经达到了2G的带宽，这也是它的主要优势所在。下一代的FC标准正在制定当中，其速度可以达到4G，今天的千兆以太网已经在普及当中，这也是基于TCP/IP的iSCSI协议进入实用的保证。
+
+得益于优秀的设计，以太网从诞生到现在，遍及了所有有网络的地方，到现在依然表现出非凡的生命力，在全球无数网络厂商的共同努力下，以太网的速度稳步提升，千兆网络已经实际应用，万兆网络呼之欲出，以太网的主要部件交换机路由器均已有万兆级别的产品。随着产品的不断丰富，以及设备厂商间的剧烈竞争，其建设成本在不断下降，万兆网络的普及已日益临近
