--- a/k8s/笔记/存储.md
+++ b/k8s/笔记/存储.md
@@ -314,3 +314,18 @@ iSCSI基于的TCP/IP协议，它本身就运行于以太网之上，因此可以
 FC运行于光网络之上，其速度是非常快的，现在已经达到了2G的带宽，这也是它的主要优势所在。下一代的FC标准正在制定当中，其速度可以达到4G，今天的千兆以太网已经在普及当中，这也是基于TCP/IP的iSCSI协议进入实用的保证。
 
 得益于优秀的设计，以太网从诞生到现在，遍及了所有有网络的地方，到现在依然表现出非凡的生命力，在全球无数网络厂商的共同努力下，以太网的速度稳步提升，千兆网络已经实际应用，万兆网络呼之欲出，以太网的主要部件交换机路由器均已有万兆级别的产品。随着产品的不断丰富，以及设备厂商间的剧烈竞争，其建设成本在不断下降，万兆网络的普及已日益临近
+
+#### **重构与预拷贝的区别？**
+
+> 重构：直接使用其它盘的冗余数据通过RAID算法来重构失效盘的数据；
+> 预拷贝：优先利用其它盘的冗余数据来重构失效盘的数据，在无法利用其它盘的数据来重构时，会重新尝试直接从慢盘或预失效盘本身来读取数据做拷贝。
+
+ 
+
+#### **重构任务有哪些类型？**
+
+> 重构任务类型有：全盘重构、预拷贝、恢复重构、局部重构；
+> 全盘重构：硬盘故障或者被拔走触发的重构，对全盘数据做重构；
+> 预拷贝：硬盘上报慢盘或者预失效后起的重构，先进行全盘重构，全盘重构不了再拷贝本盘数据；
+> 恢复重构：硬盘故障或者被拔走后再重新插回来起的重构，重构的是硬盘被拔走期间降级写数据区域；
+> 局部重构：读写遇到坏块起的重构，只对CKG其中的坏块区域做重构，重构后将该坏块区域隔离掉。
