--- a/k8s/笔记/存储.md
+++ b/k8s/笔记/存储.md
@@ -173,6 +173,8 @@ https://blog.csdn.net/m0_49864110/article/details/124126379
 
 
 
+
+
 ## RAID
 
 
@@ -489,3 +491,15 @@ https://blog.csdn.net/m0_49864110/article/details/123974131
 ###### 典型容灾解决方案
 
 两地三中心：3个站点——主站点、同城灾备站点、远程灾备站点。
+
+## SAS协议
+
+https://blog.csdn.net/sinat_37817094/article/details/120935299
+
+
+
+## SmartTier
+
+ https://blog.csdn.net/sj349781478/article/details/125116313
+
+# 存储数据保护技术——远程复制
