--- a/k8s/笔记/存储.md
+++ b/k8s/笔记/存储.md
@@ -3,6 +3,8 @@
 ## 容灾和备份的区别
   - 容灾的对象一般是大批量的数据，例如主用数据中心中的所有的生产数据，核心业务数据等，需要在主用数据中心或者主用业务链路出现故障时进行大范围大批量的数据迁移，以保证业务数据的不丢失和整体业务的连续性
   - 备份相对于容灾来说需要备份的数据是比较小规模的，具有明确的针对性的数据，比如针对某一个可靠性要求较高的业务数据或者某一个租户的数据等。
+- 容灾等级
+https://blog.csdn.net/f1092522699/article/details/112861274 
 ## 存储方案
 
 
@@ -41,12 +43,33 @@
 
 
 RAID1.5      先做RAID，再进行LUN化
-
 重构时     多对一      无论磁盘空间是否占满，都会重构整个磁盘
-
 RAID2.0     先做逻辑块组成LUN，再将LUN做RAID
   块虚拟化   将硬盘切为多个逻辑块，再将逻辑块组成LUN（每个逻辑块都来自不同的硬盘）
-
          基于LUN做RAID组（确认RAID级别）   即每个LUN就是一个RAID组
-
          重构时      多对多       重构时只重构硬盘使用的部分
+硬盘域 
+        此处是硬盘域（支持不同类型硬盘 SAS、NL-SAS、SSD等），不是硬盘组（只支持同类型硬盘）
+        硬盘域分为高性能层（SSD）、性能层（SAS）、容量层（NL-SAS/SATA）。
+
+CK
+        逻辑块，每个磁盘都有一个CK做热备块，全部的热备块组成热备盘
+        CK的大小默认一般是64M
+
+CKG
+        逻辑块组（RAID组，确认RAID级别），由CK组成（每个CK都来自不同的硬盘）
+
+Extent/Grain
+        由Extent组成的LUN不支持精简置备
+
+                -----精简置备（即用多少给多少，类似VM分给虚拟机的内存一样）
+
+        Extent一般组成单位是4MB
+        将Extent切为密度更小的Grain组成LUN，此LUN更为精简LUN，支持精简置备（SmartThin）
+
+
+## 三种备份方式（LAN Base，LAN free，ServerLess）
+
+## 远程复制
+
+https://blog.csdn.net/m0_49864110/article/details/124126379
