--- a/k8s/笔记/存储.md
+++ b/k8s/笔记/存储.md
@@ -37,6 +37,9 @@ ETL
 （3）数据结构描述的动态性。数据变化通常会导致结构模式变化，整体上具有动态得结构模式。
 
 ## SCSI协议
+
+https://www.jianshu.com/p/c890e3ad9c07
+
 总线是计算机与存储系统间通讯的主要通道，是源设备到目标设备的传输路径
 SCSI接口是一种用于计算机与周边设备通讯的接口。如上图，SCSI总线上数据操作和管理都是由SCSI的控制器进行控制，SCSI控制器可以看作是一块小型CPU，它有自己的命令集和缓存。上图的SCSI结构可以对计算机中连接到SCSI总线上的多个设备动态分工操作，灵活分配资源
  SCSI通讯过程
@@ -226,6 +229,9 @@ https://blog.csdn.net/m0_49864110/article/details/124126379
 ## 硬盘类型：
 ### SSD
 ### SAS
+https://blog.csdn.net/sinat_37817094/article/details/120935299
+
+点对点架构 性能高可达300M/s 600MB/s 或者更高
 ### NL-SAS
 
 ## RAID2.0+
