--- a/k8s/笔记/存储.md
+++ b/k8s/笔记/存储.md
@@ -232,7 +232,21 @@ https://blog.csdn.net/m0_49864110/article/details/124126379
 https://blog.csdn.net/sinat_37817094/article/details/120935299
 
 点对点架构 性能高可达300M/s 600MB/s 或者更高
+SAS特点
+因为采用串行通信方式, 可以提供更高的吞吐量, 并为将来更高的性能成为可能
+
+4个窄端口可以绑定成一个宽端口, 提供更高的吞吐量
+
+2.SAS采用全双工通信模式
+
+SAS采用全双工（双向）通信模式，而不是单向通信。传统的并行SCSI只可以在一个方向上进行通信，当设备接收到并行SCSI的一个数据包后，如果该设备要响应该数据包，就需要在上一个链路断开后，再重新建立一个新的SCSI通信链路。而是用SAS，则可以进行双向通信。每个SAS电缆有4根电缆， 2根输入2根输出。 SAS可以同时进行数据的读写，全双工的数据操作提高数据的吞吐效率。
+
+
 ### NL-SAS
+
+### IB网络
+
+IB网络因其低延迟、高带宽的网络特性被用于很多高性能计算（High Performance Computing，HPC）项目，IB网络采用了100G Mellanox IB网卡，通过专用IB交换机和控制器软件UFM实现网络通信和管理。IB网络通过Partition Key实现网络隔离，不同租户的IB网络可通过不同的Partition Key来隔离，类似于以太网的VLAN。在BMS场景，IB网络支持RDMA和IPoIB通信方式。
 
 ## RAID2.0+
 
@@ -266,3 +280,7 @@ Extent/Grain
 
         Extent一般组成单位是4MB
         将Extent切为密度更小的Grain组成LUN，此LUN更为精简LUN，支持精简置备（SmartThin）
+
+
+# RoCE、iWARP、IB和TCP
+https://blog.csdn.net/u012158332/article/details/125334200
