--- a/k8s/笔记/存储.md
+++ b/k8s/笔记/存储.md
@@ -277,7 +277,7 @@ Extent/Grain
         由Extent组成的LUN不支持精简置备
 
                 -----精简置备（即用多少给多少，类似VM分给虚拟机的内存一样）
-
+    
         Extent一般组成单位是4MB
         将Extent切为密度更小的Grain组成LUN，此LUN更为精简LUN，支持精简置备（SmartThin）
 
@@ -297,3 +297,22 @@ https://blog.csdn.net/u012158332/article/details/125334200
 （2）另一种为ROW，全称为Redirect-On-Write，也就是写时重定向。这种实现方式的基本原理是当原始磁盘写数据的时候并不在原始位置写入数据，而是分配一个新的位置
 
 当前实现快照有主要有两种技术，一种是第一次写时复制(Copy OnFirst Write,COFW)，有时简称为写时复制（CopyOn Write,COW）。即在数据第一次写入到某个存储位置时，首先将原有的内容读取出来，写到另一位置处（为快照保留的存储空间，此文中我们称为快照空间），然后再将数据写入到存储设备中。而下次针对这一位置的写操作将不再执行写时复制操作。这种技术常在计算机相关的技术中经常初使用，其基本原理大同小异，只是面向的对象不同，适用的场合不一样。从COW 的执行过程我们可以知道，这种实现方式在第一次写入某个存储位置时需要完成一个读操作（读原位置的数据），两个写操作（写原位置与写快照空间），如果写入频繁，那么这种方式将非常消耗IO时间。因此可推断，如果预计某个卷上的I/O多数以读操作为主，写操作较少，这种方式的快照实现技术是一个较理想的选择，因为快照的完成需要较少的时间。除此之外，如果一个应用易出现写入热点，即只针对某个有限范围内的数据进行写操作，那么COW的快照实现方式也是较理想的选择。因为其数据更改都局限在一个范围内，对同一份数据的多次写操作只会出现一次写时复制操作。
+
+
+
+
+
+# InfiniBand-network架构
+
+https://blog.csdn.net/sz_woshishazi/article/details/127059318
+
+IB标准的优势
+IB（InfiniBand）协议是用于高性能计算的网络通讯标准，其主要优势是：
+
+支持大量协议：包括通过IB光纤的非IB协议的隧道包，例如IPv6、Ethertype包；
+高带宽，吞吐量可实现2.5Gb/s，10Gb/s，30Gb/s；
+低延时，应用程序时延 <3us；
+高可扩展性的拓扑结构；
+非特权应用发送接收信息时，内核不用进行特权模式的切换；
+每个信息都由CA（通道适配器）的硬件DMA直接传输，而不用处理器的参与，也就是RDMA；
+大部分协议都可以在芯片上实现，减少软件和处理器的负荷。 
